--- a/index.html
+++ b/index.html
@@ -2,11 +2,31 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Home</title>
+<title>Multimediedesigner - Portfolio - Victoria Gudmund </title>
 <link href="styles/styles.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-	<h1>Skriv overskrift her</h1>
+	
+<div class="header">
+  <a href="#" class="logo"> <img src="images/logo.png" alt="Mit logo"></a>
+  <div class="header-right">
+    <a class="active" href="pages/portfolio.html">Projekter</a>
+    <a class="active" href="pages/om-mig.html">Om mig</a>
+    <a class="active" href="pages/kontakt.html">Kontakt</a>
+  </div>
+</div>
+
+<div class="hero-image">
+  <div class="hero-text">
+    <h1>VICTORIA GUDMUND</h1>
+    <h2>Multimediedesigner</h2>
+  </div>
+</div>
+
+<footer>
+	<p class= "copy"> &copy; Copyright 2018, Victoria Gudmund - Multimediedesigner</p>
+</footer>	
+	
 </body>
 </html>
